@@ -33,7 +33,7 @@
             <sub:EmergencyCallData.SubscriberInfo privacyRequested="false">
                <sub:DataProviderReference>FEABFECD901@example.org</sub:DataProviderReference>
                <sub:SubscriberData xmlns="urn:ietf:params:xml:ns:vcard-4.0">
-                 <vcards>
+                <!-- <vcards> -->
                    <vcard>
                        <fn><text>Simon Perreault</text></fn>
                        <n>
@@ -125,7 +125,7 @@
                            <uri>http://nomis80.org</uri>
                        </url>
                    </vcard>
-                 </vcards>
+               <!-- </vcards> -->
                </sub:SubscriberData>
             </sub:EmergencyCallData.SubscriberInfo>
           </ad:EmergencyCallDataValue>
